MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <label>Step Order</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>