MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>