MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Submission_Period_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Submission_Period_in_Months__c</fullName>
    <label>Submission Period in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>