MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Next of Kin</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>Joint Owner Addition</fullName>
            </value>
            <value>
                <fullName>Joint Owner Deletion</fullName>
            </value>
            <value>
                <fullName>Manage JO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>