MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Completed</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
            <value>
                <fullName>Not Yet Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>