MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Total_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Total_Ownership__c</fullName>
    <label>Total Ownership %</label>
    <summarizedField>Prospect_Account__c.OwnershipPercentage__c</summarizedField>
    <summaryForeignKey>Prospect_Account__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>