MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Total_Paid_by_Customer_with_ADM__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_by_Customer_with_ADM__c</fullName>
    <formula>Total_Paid_Amount__c + ADM_Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid by Customer with ADM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>