MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Transferred_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Service Requests (Transferred Sales Order)</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>