MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Transferred_SO_Account__c.field-meta.xml
<CustomField>
    <fullName>Transferred_SO_Account__c</fullName>
    <formula>Transferred_Sales_Order__r.CustomerAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferred SO Account</label>
    <type>Text</type>
</CustomField>