MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-Owner Deletion</fullName>
            </value>
            <value>
                <fullName>KYC Update</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Next of Kin</fullName>
            </value>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>Co-Owner Addition</fullName>
                <isActive>false</isActive>
                <label>Co-Owner Addition</label>
            </value>
            <value>
                <fullName>Manage JO</fullName>
                <isActive>false</isActive>
                <label>Manage JO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>