MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Unit_Classification__c.field-meta.xml
<CustomField>
    <fullName>Unit_Classification__c</fullName>
    <formula>Text(UnitId__r.UnitClassification__c)</formula>
    <label>Unit Classification</label>
    <type>Text</type>
</CustomField>