MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Unit_Consolidation_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Unit_Consolidation_Approvals__c</fullName>
    <label>Unit Consolidation Approvals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CM Director Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CCO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CFO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CEO Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>