MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Unit_Id_from_Salesorder__c.field-meta.xml
<CustomField>
    <fullName>Unit_Id_from_Salesorder__c</fullName>
    <formula>SalesOrder__r.Unit__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Id from Salesorder</label>
    <type>Text</type>
</CustomField>