MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <formula>UnitId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>