MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Unit_Upgrade_Approval__c.field-meta.xml
<CustomField>
    <fullName>Unit_Upgrade_Approval__c</fullName>
    <label>Unit Upgrade Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Awaiting CM Manager Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CM Director Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Executive Director Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CCO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting CEO Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>