MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/UnitId__c.field-meta.xml
<CustomField>
    <fullName>UnitId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>