MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Waiver_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Percentage__c</fullName>
    <label>Waiver Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>