MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Broker_Registration.recordType-meta.xml
<RecordType>
    <fullName>Broker_Registration</fullName>
    <active>true</active>
    <label>Broker Registration</label>
</RecordType>