MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Default_SR.recordType-meta.xml
<RecordType>
    <fullName>Default_SR</fullName>
    <active>true</active>
    <label>Default SR</label>
</RecordType>