MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/DefaultUnitCancellation.recordType-meta.xml
<RecordType>
    <fullName>DefaultUnitCancellation</fullName>
    <active>true</active>
    <label>Default Unit Cancellation</label>
</RecordType>