MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Joint_Owner_Addition_And_Deletion.recordType-meta.xml
<RecordType>
    <fullName>Joint_Owner_Addition_And_Deletion</fullName>
    <active>true</active>
    <label>Joint Owner Addition And Deletion</label>
</RecordType>