MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Joint_Owner_Deletion.recordType-meta.xml
<RecordType>
    <fullName>Joint_Owner_Deletion</fullName>
    <active>false</active>
    <label>Joint Owner Deletion</label>
</RecordType>