MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/LPC_Waiver.recordType-meta.xml
<RecordType>
    <fullName>LPC_Waiver</fullName>
    <active>true</active>
    <label>LPC Waiver</label>
</RecordType>