MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Payment_Plan_Swap.recordType-meta.xml
<RecordType>
    <fullName>Payment_Plan_Swap</fullName>
    <active>true</active>
    <label>Payment Plan Swap</label>
</RecordType>