MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Post_Unit_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Post_Unit_Cancellation</fullName>
    <active>true</active>
    <label>Post Unit Cancellation</label>
</RecordType>