MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Pre_Unit_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Pre_Unit_Cancellation</fullName>
    <active>true</active>
    <label>Pre Unit Cancellation</label>
</RecordType>