MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Property_Transfer_Title_Deed_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Property_Transfer_Title_Deed_Commercial</fullName>
    <active>true</active>
    <label>Property Transfer Title Deed (Commercial)</label>
</RecordType>