MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Request_Payment_Extension.recordType-meta.xml
<RecordType>
    <fullName>Request_Payment_Extension</fullName>
    <active>true</active>
    <label>Request Payment Extension</label>
</RecordType>