MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Service_Request_Management_ADM.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Management_ADM</fullName>
    <active>true</active>
    <label>ADM Registration</label>
</RecordType>