MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Service_Request_Management_Joint_Owner_Title_Deed.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Management_Joint_Owner_Title_Deed</fullName>
    <active>true</active>
    <label>Joint Owner Title Deed</label>
</RecordType>