MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Service_Request_Management_Property_Transfer_OffPlan.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Management_Property_Transfer_OffPlan</fullName>
    <active>true</active>
    <label>Property Transfer OffPlan</label>
</RecordType>