MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Service_Request_Management_Property_Transfer_Title_Deed.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Management_Property_Transfer_Title_Deed</fullName>
    <active>true</active>
    <label>Property Transfer Title Deed</label>
</RecordType>