MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Service_Request_Management_Unit_Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Management_Unit_Upgrade</fullName>
    <active>true</active>
    <label>Unit Upgrade</label>
</RecordType>