MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Service_Request_Milestone_Update.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Milestone_Update</fullName>
    <active>true</active>
    <label>Milestone Update</label>
</RecordType>