MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Service_Request_Plot_Handover.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Plot_Handover</fullName>
    <active>true</active>
    <label>Plot Handover</label>
</RecordType>