MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/SRM_Unit_Swap.recordType-meta.xml
<RecordType>
    <fullName>SRM_Unit_Swap</fullName>
    <active>true</active>
    <label>Unit Swap</label>
</RecordType>