MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/recordTypes/Unit_Consolidation.recordType-meta.xml
<RecordType>
    <fullName>Unit_Consolidation</fullName>
    <active>true</active>
    <label>Unit Consolidation</label>
</RecordType>