MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Cancellation_Date_must_be_a_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Date_must_be_a_future_date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Cancellation_Date__c)),
    Cancellation_Date__c &lt;= TODAY()
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Date__c</errorDisplayField>
    <errorMessage>Cancellation Date must be a future date.</errorMessage>
</ValidationRule>