MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Cancellation_Reason_is_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_is_needed</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Status__c,&apos;Cancelled&apos;) &amp;&amp;  ISPICKVAL(Cancellation_Reason__c, &apos;&apos;),true,false)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please enter Reason for Cancellation of SR</errorMessage>
</ValidationRule>