MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Cancellation_Reason_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_rule</fullName>
    <active>false</active>
    <description>This rule fires when CancellationReason is not null and when status is not cancelled.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(Cancellation_Reason__c))),
    TEXT(Status__c) &lt;&gt; &quot;Cancelled&quot;
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please Select Cancellation Reason while updating status to Cancelled</errorMessage>
</ValidationRule>