MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    NOT(
        OR(
            $Profile.Name = &quot;System Administrator&quot;,
            $Permission.Change_Owner
        )
    )
)</errorConditionFormula>
    <errorMessage>You are not authorized to change the owner of this Service Request. Please contact your System Administrator if you need assistance</errorMessage>
</ValidationRule>