MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Choose_same_plan_related_to_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Choose_same_plan_related_to_Unit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( SalesOrder__c )),
  NOT(ISBLANK( New_Payment_Plan__c )),
    SalesOrder__r.PaymentPlan__r.Phase__c    &lt;&gt;   
     New_Payment_Plan__r.Phase__c 
)</errorConditionFormula>
    <errorDisplayField>New_Payment_Plan__c</errorDisplayField>
    <errorMessage>The selected Payment Plan must belong to the same Unit as the Sales Order.</errorMessage>
</ValidationRule>