MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/CloseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseDate</fullName>
    <active>false</active>
    <description>This validation is used to prevent user too enter past dates</description>
    <errorConditionFormula>AND(ISCHANGED(CloseDate__c),CloseDate__c  &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>CloseDate__c</errorDisplayField>
    <errorMessage>Close Date Cannot be in past</errorMessage>
</ValidationRule>