MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Duplicate_SR.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_SR</fullName>
    <active>true</active>
    <description>There is an existing SR with same record type.</description>
    <errorConditionFormula>Is_Duplicate__c</errorConditionFormula>
    <errorDisplayField>SalesOrder__c</errorDisplayField>
    <errorMessage>There is an existing SR with same record type.</errorMessage>
</ValidationRule>