MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Lock_SellingPrice_After_Step7.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_SellingPrice_After_Step7</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Step_Order__c &gt; 7,
ISCHANGED(Selling_Price__c)
)</errorConditionFormula>
    <errorDisplayField>Selling_Price__c</errorDisplayField>
    <errorMessage>You cannot edit Selling Price as financial approval is done.</errorMessage>
</ValidationRule>