MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/New_Payment_Plan_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Payment_Plan_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Payment_Plan_Swap&quot;,
    ISBLANK(New_Payment_Plan__c)
)</errorConditionFormula>
    <errorDisplayField>New_Payment_Plan__c</errorDisplayField>
    <errorMessage>New Payment Plan is required for Creating the service request to Swap Payment Plan.</errorMessage>
</ValidationRule>