MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/New_SR_cannot_be_Closed_or_cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>New_SR_cannot_be_Closed_or_cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), OR(ISPICKVAL( Status__c , &quot;Closed&quot;),ISPICKVAL( Status__c , &quot;Cancelled&quot;)) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot Create a SR with Closed or Cancelled Status</errorMessage>
</ValidationRule>