MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/OpenDate.validationRule-meta.xml
<ValidationRule>
    <fullName>OpenDate</fullName>
    <active>true</active>
    <description>This rule is used to restrict user to enter past dates</description>
    <errorConditionFormula>AND(
    ISNEW(),
    OpenDate__c &lt; TODAY(),
    RecordType.DeveloperName &lt;&gt; &quot;Service_Request_Management_ADM&quot;
)</errorConditionFormula>
    <errorDisplayField>OpenDate__c</errorDisplayField>
    <errorMessage>Open Date Cannot be in past</errorMessage>
</ValidationRule>