MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Payment_Extension_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Extension_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordTypeName__c =&apos;Request Payment Extension&apos;,	(Payment_Extension_Date__c &lt; Actual_Installment_Date__c))</errorConditionFormula>
    <errorDisplayField>Payment_Extension_Date__c</errorDisplayField>
    <errorMessage>Payment Extension Date cannot be before Original Installment date</errorMessage>
</ValidationRule>