MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Payment_Extension_Check1.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Extension_Check1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordTypeName__c =&apos;Request Payment Extension&apos;,	(Payment_Extension_Date__c &gt;  Actual_Requested_Date__c))</errorConditionFormula>
    <errorDisplayField>Payment_Extension_Date__c</errorDisplayField>
    <errorMessage>Payment Extension Date cannot be after Requested Date</errorMessage>
</ValidationRule>