MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Payment_Extension_Check2.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Extension_Check2</fullName>
    <active>false</active>
    <errorConditionFormula>Isnew() &amp;&amp; ((today()+ 15)&gt;  Actual_Installment_Date__c)</errorConditionFormula>
    <errorMessage>Cannot Request a Payment Extension if the Installment date is within next 15 days</errorMessage>
</ValidationRule>