MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/PE_Same_day_as_payment.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Same_day_as_payment</fullName>
    <active>true</active>
    <errorConditionFormula>Isnew() &amp;&amp; (Actual_Installment_Date__c == Payment_Extension_Date__c)</errorConditionFormula>
    <errorDisplayField>Payment_Extension_Date__c</errorDisplayField>
    <errorMessage>Cannot Create a Payment Extension for same day as Actual Payment Date</errorMessage>
</ValidationRule>