MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Pre_Unit_Service_request_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Unit_Service_request_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    RecordType.Name = &quot;Pre Unit Cancellation&quot;,
    NOT(
        OR(
            TEXT(SalesOrder__r.Status__c) = &quot;New&quot;,
            TEXT(SalesOrder__r.Status__c) = &quot;In Progress&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>You can create Pre Unit Cancellation Service Request only when Sales Order status is New or In Progress.</errorMessage>
</ValidationRule>