MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Primary_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Phone_Validation</fullName>
    <active>false</active>
    <description>The Primary Phone Number should be only 12 Digits and if we use + in the prefix it should start with 971</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Primary_Phone__c)),
    NOT(
        REGEX(
            Primary_Phone__c,
            &quot;^(\\+971[0-9]{9}|[0-9]{9})$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Primary_Phone__c</errorDisplayField>
    <errorMessage>The Phone Format Should be +971xxxxxxxxx or xxxxxxxxx And No Alphabets Included</errorMessage>
</ValidationRule>