MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Record_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Locked</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    OR(
        ISPICKVAL(Status__c, &quot;Closed&quot;),
        ISPICKVAL(Status__c, &quot;Cancelled&quot;)
    )
)</errorConditionFormula>
    <errorMessage>This record is marked Closed/Cancelled. Please contact Admin.</errorMessage>
</ValidationRule>