MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/Sales_Order_does_not_belong_to_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Order_does_not_belong_to_selected</fullName>
    <active>false</active>
    <description>Sales Order does not belong to selected Account</description>
    <errorConditionFormula>AccountId__r.Id != SalesOrder__r.CustomerAccount__r.Id &amp;&amp;
RecordType.Name == &apos;Service Request Management - Joint Owner Title Deed&apos;</errorConditionFormula>
    <errorDisplayField>SalesOrder__c</errorDisplayField>
    <errorMessage>Sales Order does not belong to selected Account</errorMessage>
</ValidationRule>