MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/SalesOrder_Field_Blank_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SalesOrder_Field_Blank_Check</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(SalesOrder__c) &amp;&amp; ISBLANK(Milestone__c)</errorConditionFormula>
    <errorMessage>Sales Order is Mandatory</errorMessage>
</ValidationRule>