MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/SO_is_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>SO_is_Cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),OR(ISPICKVAL(SalesOrder__r.Status__c, &apos;Cancelled&apos;) , ISPICKVAL(SalesOrder__r.Status__c, &apos;System Cancelled&apos;),ISPICKVAL(SalesOrder__r.Status__c, &apos;Cancelled SR&apos;)))</errorConditionFormula>
    <errorDisplayField>SalesOrder__c</errorDisplayField>
    <errorMessage>SR Cannot be Created for a Cancelled SalesOrder</errorMessage>
</ValidationRule>