MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/validationRules/UC_cannot_be_greater_than_Total_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>UC_cannot_be_greater_than_Total_paid</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Paid_Amount__c &lt;  Equity_Transfer_Amount__c</errorConditionFormula>
    <errorDisplayField>Equity_Transfer_Amount__c</errorDisplayField>
    <errorMessage>Equity Transfer Amount Cannot be Greater than Total Paid Amount</errorMessage>
</ValidationRule>