MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/ADM.listView-meta.xml
<ListView>
    <fullName>ADM</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CloseDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordTypeName__c</field>
        <operation>contains</operation>
        <value>ADM</value>
    </filters>
    <label>ADM SRs</label>
</ListView>