MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/ADM_Team_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>ADM_Team_ServiceRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>ADM Team</label>
    <queue>ADM_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>