MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Joint_Owner__c</columns>
    <columns>Name__c</columns>
    <columns>OpportunityId__c</columns>
    <columns>ProjectId__c</columns>
    <columns>SalesOrder__c</columns>
    <columns>SR_OriginID__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>UnitId__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>