MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/Amal_ADM_SRs.listView-meta.xml
<ListView>
    <fullName>Amal_ADM_SRs</fullName>
    <booleanFilter>(1 AND 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>UnitId__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Cancelled</value>
    </filters>
    <filters>
        <field>RecordTypeName__c</field>
        <operation>equals</operation>
        <value>ADM Registration</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Amal</value>
    </filters>
    <label>Amal ADM SRs</label>
    <sharedTo>
        <group>List_View_Access</group>
    </sharedTo>
</ListView>