MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/Broker_Registration_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>Broker_Registration_ServiceRequest</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Fast_Track__c</columns>
    <columns>Fast_Track_Enabled_By__c</columns>
    <columns>Fast_Track_Enabled_Date__c</columns>
    <columns>Registration__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>equals</operation>
        <value>Broker Registration</value>
    </filters>
    <label>Broker Registration</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>