MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/Brokers_Queue_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>Brokers_Queue_ServiceRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>Brokers Queue</label>
    <queue>Brokers_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>