MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/CM_Manager_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>CM_Manager_ServiceRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>CM Manager</label>
    <queue>CM_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>