MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/CM_Team_SR_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>CM_Team_SR_ServiceRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>CM Team SR</label>
    <queue>CM_Team_SR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>