MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/listViews/CollectionTeam_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>CollectionTeam_ServiceRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>CollectionTeam</label>
    <queue>CollectionTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>